# hangul-zip

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
ui/: index.html
